--- a/.gitignore/README
+++ b/.gitignore/README
@@ -4,3 +4,4 @@ Equipo: Compiladores2019-1
 Integrantes:
 Marco Alan Montaño Bautista   308315569 marco_montano@ciencias.unam.mx
 Miguel Alejandro Anzures Reyes 310090034 alejandreyes36@gmail.com
+José Manuel Chávez Pavón 311152445 mchavezpavon@ciencias.unam.mx
