--- a/Proyectos/Proyecto05/README
+++ b/Proyectos/Proyecto05/README
@@ -11,4 +11,9 @@ Montaño Bautista Marco Alan
 Proyecto 05 de Compiladores 
 
 La salida del archivo generado por el compilador se encuentra en la carpeta out/fichero.asm
+
+Para ejecutar el programa generado tener instalado un emulador de mips
+>spim
+>load "'fichero'.asm"
+>run
  
