--- a/Proyectos/Proyecto05/README
+++ b/Proyectos/Proyecto05/README
@@ -17,3 +17,4 @@ Para ejecutar el programa generado tener instalado un emulador de mips
 >load "'fichero'.asm"
 >run
  
+con fichero el nombre del archivo que se compilo pero en lugar de la terminacion .p es .asm
