--- a/Proyectos/Proyecto05/README
+++ b/Proyectos/Proyecto05/README
@@ -14,7 +14,6 @@ La salida del archivo generado por el compilador se encuentra en la carpeta out/
 
 Para ejecutar el programa generado tener instalado un emulador de mips
 >spim
->load "'fichero'.asm"
->run
+>load "'fichero'.asm">run
  
 con fichero el nombre del archivo que se compilo pero en lugar de la terminacion .p es .asm
